src/test/ui/issues/issue-24352.rs
fn main() {
    1.0f64 - 1.0;
    1.0f64 - 1 //~ ERROR E0277
}
